[gd_scene load_steps=5 format=3 uid="uid://vhthnoeoasmb"]

[ext_resource type="Script" uid="uid://pnviiawc1u6q" path="res://Objs/slime/slime.gd" id="1_ko2bn"]
[ext_resource type="Texture2D" uid="uid://cylcraghsmx7l" path="res://Arts/slime.png" id="1_sem50"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ko2bn"]
size = Vector2(64, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_80xyc"]
radius = 384.0

[node name="Slime" type="Node2D"]
script = ExtResource("1_ko2bn")
attributes = {
"Hostile": true
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
texture = ExtResource("1_sem50")

[node name="Hitbox" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_ko2bn")

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource("RectangleShape2D_ko2bn")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_80xyc")

[node name="Timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
